syntax = "proto3";
package pushnotifications.admin;

// all admin requests accept the params,headers and context objects as stringified json
message AdminRequest {
  string params = 1;
  string headers = 2;
  string context = 3;
}
// all admin responses return their results as stringified json
message AdminResponse {
  string result = 1;
}

service Admin {
  rpc SendNotification(AdminRequest) returns (AdminResponse);
  rpc SendManyNotifications(AdminRequest) returns (AdminResponse);
  rpc SendToManyDevices(AdminRequest) returns (AdminResponse);
  rpc GetNotificationToken(AdminRequest) returns (AdminResponse);
}
